2017-02-26  Bruno Haible  <bruno@clisp.org>

	configure: Fix build failure when CC is set and not GCC
	(regression from 2011-05-17).
	* configure: Ignore exit code of CC_machine assigment statement.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Fix bug#680: build failure when using --elispdir option.
	* configure: Pass --elispdir option and argument only to makemake.
	Reported by Alex D in <https://sourceforge.net/p/clisp/bugs/680/>.

2017-02-25  Bruno Haible  <bruno@clisp.org>

	Fix build failure when using --with-libreadline-prefix option.
	The cause was that the modules/readline/configure script was ignoring
	the --with-libreadline-prefix option during autoconfiguration but not
	during compilation, because acl_libname_spec and acl_shlibext came out
	as empty.
	* m4/readline.m4 (CL_READLINE): AC_REQUIRE the prerequisites of
	AC_LIB_LINKFLAGS_BODY.

2017-02-25  Bruno Haible  <bruno@clisp.org>

	configure: Give some advice when readline or libncurses is not found.
	* m4/readline.m4 (CL_READLINE): If not found, set ac_cv_have_readline
	to 'no, per user request'
	or 'no, consider installing GNU ncurses'
	or 'no, consider installing GNU readline and its header files'
	or 'no, consider installing GNU readline 4.1 or newer'.

2017-02-25  Bruno Haible  <bruno@clisp.org>

	configure: Improve failure message when --with-ffcall cannot be honored.
	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): New macro.
	(CL_FFCALL): Upon failure, suggest to build a downloaded tarball. Fix
	the final configure invocation line.

2017-02-25  Bruno Haible  <bruno@clisp.org>

	configure: Give some advice when libffcall is not found.
	* m4/ffcall.m4 (CL_FFCALL): If not found, set cl_cv_have_ffcall to
	'no, consider installing GNU libffcall'.
	* configure: Adjust accordingly.

2017-02-24  Bruno Haible  <bruno@clisp.org>

	Fix build failure on non-glibc platforms.
	* utils/*.c: Include <config.h>.
	* src/makemake.in (UTILS, hardcode): Compile with option "-I.".
	Reported by Sam Steingold.
